--- a/src/modules/signUp/signUp.scss
+++ b/src/modules/signUp/signUp.scss
@@ -8,7 +8,7 @@
     align-items: center;
     .container-register {
         width: 30%;
-        height: 70%;
+        height: 65%;
         background-color: white;
         display: flex;
         flex-direction: column;
@@ -157,6 +157,7 @@
         }
         .profilePicture-buttons-container {
             display: flex;
+            margin-top: 25px;
             width: 100%;
             height: 100%;
             .profileContainer {
