--- a/src/modules/login/login.scss
+++ b/src/modules/login/login.scss
@@ -86,6 +86,27 @@
             }
         }
         .register-link {
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .error {
+                margin-top: 5px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 35px;
+                background-color: #B71C1C;
+                border-radius: 5px;
+                span {
+                    font-family: 'Azeret Mono', monospace;
+                    font-size: 12pt;
+                    color: #fff;
+                    text-align: center;
+                }
+            }
             span {
                 color: #01579B;
                 a {
