--- a/src/modules/viewPatient/style.scss
+++ b/src/modules/viewPatient/style.scss
@@ -139,12 +139,12 @@
         }
     }
     .rightContent {
+        display: block;
         width: 50%;
         height: 100%;
         .right {
             width: 100%;
             height: 100vh;
-            background-color: blue;
         }
     }
 }
