--- a/src/modules/addPatient/style.scss
+++ b/src/modules/addPatient/style.scss
@@ -67,5 +67,27 @@
                 }
             }
         }
+        .error {
+            margin-top: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 35px;
+            background-color: #B71C1C;
+            border-radius: 5px;
+            span {
+                font-family: 'Azeret Mono', monospace;
+                font-size: 12pt;
+                color: #fff;
+                text-align: center;
+            }
+        }
+        span {
+            color: #01579B;
+            a {
+                color: #40C4FF;
+            }
+        }
     }
 }
