--- a/src/modules/signUp/signUp.scss
+++ b/src/modules/signUp/signUp.scss
@@ -72,6 +72,7 @@
                 width: 100%;
                 display: flex;
                 flex-direction: column;
+                margin: 0% 0% 0% 2%;
                 label {
                     font-weight: bold;
                 }
@@ -157,7 +158,7 @@
         }
         .profilePicture-buttons-container {
             display: flex;
-            margin-top: 25px;
+            margin-top: 0px !important;
             width: 100%;
             height: 100%;
             .profileContainer {
@@ -196,6 +197,28 @@
                         cursor: pointer;
                     }
                 }
+            }
+        }
+        .error {
+            margin-top: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 35px;
+            background-color: #B71C1C;
+            border-radius: 5px;
+            span {
+                font-family: 'Azeret Mono', monospace;
+                font-size: 12pt;
+                color: #fff;
+                text-align: center;
+            }
+        }
+        span {
+            color: #01579B;
+            a {
+                color: #40C4FF;
             }
         }
     }
