--- a/src/modules/dashboard/dashboard.scss
+++ b/src/modules/dashboard/dashboard.scss
@@ -1,5 +1,7 @@
 .dashboardContainer {
     display: flex;
+    justify-content: center;
+    align-items: center;
     .chartContent {
         width: 100vw;
         height: 100vh;
