--- a/src/modules/viewPatient/style.scss
+++ b/src/modules/viewPatient/style.scss
@@ -96,7 +96,7 @@
                 .buttonsContainer {
                     padding: 10px;
                     display: flex;
-                    justify-content: space-between;
+                    justify-content: end;
                     .buttonDash {
                         width: 150px;
                         height: 50px;
